<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

    <ImageView
        android:id="@+id/ivLogoAcercaDe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/banking"/>

    <TextView
        android:id="@+id/txvNombreVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@id/ivLogoAcercaDe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/app_nameV"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txvDesarrolladores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintTop_toBottomOf="@id/txvNombreVersion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:text="@string/desarrolladores"
        android:textSize="20sp"
        android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/txvDesarrolladores"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dv1"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dv2"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dv3"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dv4"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dv5"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>